--- a/papers/LOPSRT-23/main.tex
+++ b/papers/LOPSRT-23/main.tex
@@ -1,12 +1,23 @@
-% !TEX TS-program = pdflatex
-% !TeX spellcheck = en_US
-% !TEX root = uigen.tex
-\documentclass{article}
-
+% This is samplepaper.tex, a sample chapter demonstrating the
+% LLNCS macro package for Springer Computer Science proceedings;
+% Version 2.21 of 2022/01/12
+%
+\documentclass[runningheads]{llncs}
+%
+\usepackage[T1]{fontenc}
+% T1 fonts will be used to generate the final print and online PDFs,
+% so please use T1 fonts in your manuscript whenever possible.
+% Other font encondings may result in incorrect characters.
+%
 \usepackage{graphicx}
-%\usepackage{tikz}
-%\usetikzlibrary{shapes.geometric,backgrounds,
-%  positioning-plus,node-families,calc}
+% Used for displaying a sample figure. If possible, figure files should
+% be included in EPS format.
+%
+% If you use the hyperref package, please uncomment the following two lines
+% to display URLs in blue roman font according to Springer's eBook style:
+%\usepackage{color}
+%\renewcommand\UrlFont{\color{blue}\rmfamily}
+%
 \usepackage{xcolor}
 \usepackage{amsfonts}
 \usepackage{mathtools}
@@ -29,17 +40,35 @@
 \newcommand{\cc}[1]{\lfloor{#1}\rfloor}
 \sloppy
 
+\pagestyle{plain}
+\usepackage{lineno}
+\linenumbers
+
 \begin{document}
-
-\title{Java Generics Type Solver}
-
-\author{Dmitri Boulytchev}
-%{St.Petersburg State University \\ 
-%  Saint-Petersburg, Russia }
-%{$\mathtt{Dmitrii.Kosarev@protonmail.ch}$ \and $\mathtt{dboulytchev@math.spbu.ru}$}
-
-\maketitle
-
+%
+\title{Relational Solver for Java Generics Type System}
+%
+%\titlerunning{Abbreviated paper title}
+% If the paper title is too long for the running head, you can set
+% an abbreviated paper title here
+%
+\author{Dmitry Kosarev\inst{2}\orcidID{0000-1111-2222-3333} \and
+Peter Lozov\inst{2}\orcidID{1111-2222-3333-4444} \and
+Dmitry Ivanov\inst{1}\orcidID{2222--3333-4444-5555}\and
+Dmitry Boulytchev\inst{2}\orcidID{}
+}
+%
+\authorrunning{Dmitry Kosarev et al.}
+% First names are abbreviated in the running head.
+% If there are more than two authors, 'et al.' is used.
+%
+\institute{Saint-Petersburg,\\
+\email{korifey@gmail.com}\\
+Saint-Petersburg State University, \\
+\email{\{dboulytchev\}@math.spbu.ru}}
+%
+\maketitle              % typeset the header of the contribution
+%
 \begin{abstract}
   This is a zero-iteration analysis for the problem of solving systems of subtyping
   equations in the Java generics type system. More specifically, we put the
@@ -47,8 +76,12 @@
   specificity to the analysis. We reiterate on the Java generics type system, subtyping
   relation and relevant notions, and discuss the pecularities of relational verifier-to-solver
   approach application. %, and describe a prototype of functional subtyping verifier.
-\end{abstract}
 
+\keywords{First keyword  \and Second keyword \and Another keyword.}
+\end{abstract}
+%
+%
+%
 \section{Java Generics}
 
 Here we briefly describe the relevant (at the first glance) subpart of Java type system. All
@@ -203,11 +236,13 @@ prototype implementation open recursion is used and the knot is tied on the very
 scalable enough to be applied in the final functional-relational mixture.
 
 
-\begin{thebibliography}{99}
-\bibitem{JLS}
-  James Gosling \emph{et al.} The Java Language Specification. \emph{Java SE 19 Edition}, 2022-08-31 //
-  \url{https://docs.oracle.com/javase/specs/jls/se19/jls19.pdf}
-\end{thebibliography}
-
+%
+% ---- Bibliography ----
+%
+% BibTeX users should specify bibliography style 'splncs04'.
+% References will then be sorted and formatted in the correct style.
+%
+\bibliographystyle{splncs04}
+\bibliography{main}
+%
 \end{document}
-
