--- a/papers/LOPSRT-23/main.tex
+++ b/papers/LOPSRT-23/main.tex
@@ -40,6 +40,39 @@
 \newcommand{\cc}[1]{\lfloor{#1}\rfloor}
 \sloppy
 
+\lstdefinelanguage{ocanren}{
+keywords={run, conde, fresh, let, in, match, with, when, class, type,
+object, method, of, rec, repeat, until, while, not, do, done, as, val, inherit,
+new, module, sig, deriving, datatype, struct, if, then, else, open, private, virtual, include, success, failure, switch,
+true, false, ocanren},
+sensitive=true,
+commentstyle=\small\itshape\ttfamily,
+keywordstyle=\ttfamily\textbf,
+identifierstyle=\ttfamily,
+basewidth={0.5em,0.5em},
+columns=fixed,
+mathescape=true,
+fontadjust=true,
+literate={fun}{{$\lambda$}}1 {->}{{$\to$}}3 {===}{{$\equiv$}}1 {=/=}{{$\not\equiv$}}1 {|>}{{$\triangleright$}}3 {\\/}{{$\vee$}}2 {/\\}{{$\wedge$}}2 {^}{{$\uparrow$}}1
+%{[]}{{\texttt|[]|}}1
+,
+morecomment=[s]{(*}{*)}
+}
+
+\lstdefinelanguage{ocaml}{
+keywords={type, struct},
+sensitive=true,
+commentstyle=\small\itshape\ttfamily,
+keywordstyle=\ttfamily\textbf,
+%keywordstyle=\ttfamily\underbar,
+identifierstyle=\ttfamily,
+basewidth={0.5em,0.5em},
+columns=fixed,
+fontadjust=true,
+literate={->}{{$\to$}}3 {=>}{{$\Rightarrow$}}3,
+morecomment=[s]{(*}{*)}
+}
+
 \pagestyle{plain}
 \usepackage{lineno}
 \linenumbers
@@ -82,158 +115,12 @@ Saint-Petersburg State University, \\
 %
 %
 %
-\section{Java Generics}
-
-Here we briefly describe the relevant (at the first glance) subpart of Java type system. All
-information in this section is directly derived from the Java Language Specification~\cite{JLS};
-however the accuracy of this derivation has yet to be scrutineed. We also refrain from
-reiterating on the non-generic part of Java type system assuming reader's familiarity with the
-concepts of reference types, arrays, classes, interfaces, and inheritance.
-
-The subsystem we are dealing with contains generic class/interface types, array types,
-type variables, null and intersection types:
-
-\[
-\begin{array}{rcll}
-  \mathscr{T} & = & \alpha^\mathscr{T}_\mathscr{T_\bot}&\mbox{--- type variable}\\[2mm]
-              &   & \bigcap\,\mathscr{T}           &\mbox{--- intersection type}\\[2mm]
-              &   & \grc{C}{\mathscr{T}^*}         &\mbox{--- class or interface type}\\[2mm]
-              &   & \mathscr{T}\mbox{\java{[]}}    &\mbox{--- array type}\\[2mm]
-              &   & \primi{null}                   &\mbox{--- null type}\\[2mm]
-\end{array}
-\]
-
-Here $\mathscr{T}_\bot$ denotes optional type.
-
-Type variables are bounded in the sense that they always have a certain \emph{upper bound}. This upper
-bound can be either specified explicitly or assumed to be \java{java.lang.Object}. In addition
-to the upper bound a type variable can be equipped with a \emph{lower bound}. The lower bound can only
-be derived implicitly as a result of \emph{capture conversion}. We denote the upper bound of a variable
-by  superscript and lower~--- by subscript.
-
-Generic class (or interface) is a class/interface which is equipped with a number of
-type parameters. In generic class declaration these parameters can only be type
-variables with specified upper bounds. Additionally a number of \emph{direct supertypes} (notation: ``$\prec$'')
-can be specified for a generic class/interface:
-
-\[
-\grc{C}{\alpha_1^{U_1}\dots \alpha_k^{U_k}}\prec\grc{S_1}{T^1_1\dots T^1_{n_1}}\dots\grc{S_m}{T^m_1\dots T^m_{n_m}}
-\]
-
-Here $C$ is the class/interface being declared, $\alpha_i^{U_i}$~--- its generic parameters with upper
-bounds, $S_i$~--- its direct supertypes, among which only one type can be a class type, $T^j_l$~--- type
-parameters for direct supertypes, which may contain the occurences of $\alpha_i$; note: neither of $T^j_l$ can be
-an intersection type.
-
-Type variables in scopes of their declarations behave like regilar types; the scope of a type variable is
-determined by the position of its introduction (either generic class/interface or generic method). It
-is unclear what is the scope of type variables introduced implicitly as a result of capture
-conversion (but this might be irrelevant to the problem we are dealing with).
-
-Intersection types can not be declared explicitly; the only positions in which they can be specified are
-upper bounds of type parameters in generic class/interface declarations. However intersection types can be derived
-as a result of capture conversion.
-
-Null type is an artificial transparent type with no explicit representation. It is assumed to be a subtype for
-every other reference type.
-
-Besides regular types generic classes can be applied to \emph{wildcard types}. A wildcard is an anonymous
-type variable (notation: ``\java{?}'') equipped with optional lower or upper bound which can not be an intersection type.
-If no upper bound is specified then \java{java.lang.Object} is implicitly assumed. It is important that wildcards can not 
-be used to parameterize direct supertypes in generic class/interface declarations. Array types can not be directly
-parameterized by wildcards.
-
-To establish the subtyping relation (denotation: ``$\precprec$'') between types parameterized by wildcards two additional
-notions are introduces.
-
-The first one is the ``contains'' relation ``$\supseteq$'' between wildcard types:
-
-\[
-\begin{array}{rclcl}
-  \java{?}^T&\supseteq&\java{?}^S&,&T\precprec S \\[2mm]
-  \java{?}^T&\supseteq&\java{?}&& \\[2mm]
-  \java{?}_T&\supseteq&\java{?}_S&,&S\precprec T\\[2mm]
-  \java{?}_T&\supseteq&\java{?}&& \\[2mm]
-  \java{?}_T&\supseteq&\java{?}^\java{java.lang.Object}&& \\[2mm]
-  T&\supseteq& T&&\\[2mm]
-  T&\supseteq&\java{?}^T&&\\[2mm]
-  T&\supseteq&\java{?}_T&&
-\end{array}
-\]
-
-The second is capture conversion which is defined as follows. Let
-
-\[
-\grc{C}{T_1\dots T_k}
-\]
-
-be a generic class/interface type where some of $T_i$ are wildcards. Let
-
-\[
-\beta_i^{U_i}
-\]
-
-be the $i$-th type parameter of $C$'s declaration. Then capture conversion of
-$\grc{C}{T_1\dots T_K}$ is the type $\grc{C}{\cc{T_1}\dots \cc{T_k}}$ where the transformation
-``$\cc{\bullet}$'' is defined as follows:
-
-\[
-\cc{T_i}=\left\{
-\begin{array}{lll}  
-  \alpha^{U_i[\beta_j\gets \cc{T_j}]}_\primi{null}      &\mbox{if }        T_i=\java{?}  &\mbox{($\alpha$ is a fresh type variable)}\\[5mm]
-  \alpha^{B\cap U_i[\beta_j\gets \cc{T_j}]}_\primi{null} &\mbox{if }        T_i=\java{?}^B &\mbox{($\alpha$ is a fresh type variable)}\\[5mm]
-  \alpha^{U_i[\beta_j\gets \cc{T_j}]}_B               &\mbox{if }        T_i=\java{?}_B &\mbox{($\alpha$ is a fresh type variable)}\\[5mm]
-  T_i                                           &\mbox{otherwise}  & 
-\end{array}\right.
-\]
-
-Here ``$[\bullet\gets\bullet]$'' denotes a (simultaneous) substitution of type variables with some types. Note, in capture conversion
-type parameters of the class under conversion are substituted with the results of the conversion in all bounds.
-
-The subtyping relation ``$\precprec$'', which is the principle notion for the problem we are dealing with, is defined as a reflexive-transitive
-closure of the direct supertype relation ``$\prec$''. We already described one case of direct supertyping, the others are as follows:
-
-\[
-\begin{array}{rclcl}
-  I & \prec & \java{java.lang.Object} &,& \mbox{($I$ is an interface with no}\\
-    &       &                         & &\mbox{direct superinterface)}\\[2mm]
-  \grc{C}{T_1\dots T_k} & \prec & \grc{C}{S_1\dots S_k} &,& \forall i\, .\, S_i\supseteq T_i\\[2mm]
-  \grc{C}{T_1\dots T_k} & \prec & S &,& \grc{C}{\cc{T_1}\dots \cc{T_k}}\prec S\\[2mm]
-  \bigcap T_i & \prec & T_i && \\[2mm]
-  \alpha^{\bigcap T_i} & \prec & T_i &&\\[2mm]
-  T & \prec & \alpha_T && \\[2mm]
-  \primi{null} & \prec & T &&\\[2mm]
-  T\java{[]} & \prec & S\java{[]} &,& T\prec S\\[2mm]
-  \java{java.lang.Object[]} & \prec & \java{java.lang.Object} &&  \\[2mm]
-  \java{java.lang.Object[]} & \prec & \java{java.lang.Cloneabe} && \\[2mm]
-  \java{java.lang.Object[]} & \prec & \java{java.io.Serializable} &&
-\end{array}
-\]
-
-Note: the notions ``$\supseteq$'', ``$\prec$'', and ``$\precprec$'' are defined mutually recursive: ``$\precprec$'' is used
-to define ``$\supseteq$'', which is used to define ``$\prec$'', which, in turn, is the basic relation to define ``$\precprec$''.
-
-\section{On Functional/Relational Subtyping\\ Verifier/Solver}
-
-The approach of verifier-to-solver conversion relies on the implementation of functional verifier for the problem in question. In our
-case such verifier should test if two given ground types are in the subtyping relation. This, in particular, requires implementation
-of capture conversion, ``contains'' relation, and direct subtyping verifier. Then a refexive-transitive closure of the latter has to
-be implemented. The functional verifier is then converted into relational form which by construction delivers a subtyping solver for
-non-ground types with free variables.
-
-A simple observation, however, makes its obvious that it is in fact much easier to implement reflexive-transitive closure directly
-in relational language. Indeed, given relation $R$ its reflexive-transitive $R^*$ closure can be expressed by just
-
-\[
-R^*\,(x,\, y) = R\, (x,\, y)\vee x\equiv y\vee\exists\, z\,.\,R\,(x,\,z)\wedge R\,(z,\,y)
-\]
-
-This is rather expected by the very nature of relational programming.
-
-However, from the implementation standpoint the application of this technique imposes a certain problem since ``$\prec$'' and ``$\precprec$''
-are mutually recursive, and we expect ``$\prec$'' to be obtained as a result of relational conversion of functional implementation. In current
-prototype implementation open recursion is used and the knot is tied on the very top level. We hope that this (obvious) solution will be
-scalable enough to be applied in the final functional-relational mixture.
+\input{intro}
+\input{rel}
+\input{java}
+\input{solver}
+\input{eval}
+\input{conclusion}
 
 
 %
