--- a/papers/LOPSRT-23/main.tex
+++ b/papers/LOPSRT-23/main.tex
@@ -103,6 +103,9 @@ Saint-Petersburg State University, \\
 \maketitle              % typeset the header of the contribution
 %
 \begin{abstract}
+  We present a solver for Java generics type system implemented using relational verifier-to-solver
+  approach. The solver finds solutions for a system of subtyping inequations
+  
   This is a zero-iteration analysis for the problem of solving systems of subtyping
   equations in the Java generics type system. More specifically, we put the
   problem in the context of relational verifier-to-solver approach, which brings in a certain
