All except for the evaluation

--- a/papers/LOPSRT-23/conclusion.tex
+++ b/papers/LOPSRT-23/conclusion.tex
@@ -1,2 +1,9 @@
 \section{Conclusion}
 \label{sec:conclusion}
+
+We presented here a first iteration of \textsc{Java} generics type solver implementation using relational verifier-to-solver
+conversion technique. While the solver does not demonstrate the desirable performance yet it nevertheless showcases all
+major steps, properties, and caveats of the approach we advocate. We consider the development and application of problem-specific
+optimizations of the solver as the main direction for future research. Our prior experience shows that such an optimiztions
+can boost the performance to the level neccessary to be used as a component in a symbolic execution engine for verification
+and testing of real-world \textsc{Java} applications.
