--- a/papers/LOPSRT-23/main.bib
+++ b/papers/LOPSRT-23/main.bib
@@ -1,3 +1,90 @@
+@article{JGTC,
+author = {Grigore, Radu},
+title = {Java Generics Are Turing Complete},
+year = {2017},
+issue_date = {January 2017},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {52},
+number = {1},
+issn = {0362-1340},
+url = {https://doi.org/10.1145/3093333.3009871},
+doi = {10.1145/3093333.3009871},
+abstract = {This paper describes a reduction from the halting problem of Turing machines to subtype checking in Java. It follows that subtype checking in Java is undecidable, which answers a question posed by Kennedy and Pierce in 2007. It also follows that Java's type checker can recognize any recursive language, which improves a result of Gill and Levy from 2016. The latter point is illustrated by a parser generator for fluent interfaces.},
+journal = {SIGPLAN Not.},
+month = {jan},
+pages = {73–85},
+numpages = {13},
+keywords = {subtype checking, Java, Turing machine, parser generator, decidability, fluent interface}
+}
+
+@inproceedings{10.1145/3009837.3009871,
+author = {Grigore, Radu},
+title = {Java Generics Are Turing Complete},
+year = {2017},
+isbn = {9781450346603},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3009837.3009871},
+doi = {10.1145/3009837.3009871},
+abstract = {This paper describes a reduction from the halting problem of Turing machines to subtype checking in Java. It follows that subtype checking in Java is undecidable, which answers a question posed by Kennedy and Pierce in 2007. It also follows that Java's type checker can recognize any recursive language, which improves a result of Gill and Levy from 2016. The latter point is illustrated by a parser generator for fluent interfaces.},
+booktitle = {Proceedings of the 44th ACM SIGPLAN Symposium on Principles of Programming Languages},
+pages = {73–85},
+numpages = {13},
+keywords = {Java, subtype checking, parser generator, fluent interface, decidability, Turing machine},
+location = {Paris, France},
+series = {POPL '17}
+}
+
+
+
+@article{Symbolic,
+author = {Cadar, Cristian and Sen, Koushik},
+title = {Symbolic Execution for Software Testing: Three Decades Later},
+year = {2013},
+issue_date = {February 2013},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+volume = {56},
+number = {2},
+issn = {0001-0782},
+url = {https://doi.org/10.1145/2408776.2408795},
+doi = {10.1145/2408776.2408795},
+abstract = {The challenges---and great promise---of modern symbolic execution techniques, and the tools to help implement them.},
+journal = {Commun. ACM},
+month = {feb},
+pages = {82–90},
+numpages = {9}
+}
+
+@online{java,
+title="Java programming language page",
+url="https://www.oracle.com/java/",
+lastaccessed = {June 9, 2023}
+}
+
+@online{tiobe,
+title="TIOBE Index",
+url="https://www.tiobe.com/tiobe-index/",
+lastaccessed = {June 9, 2023}
+}
+
+@INPROCEEDINGS{SBCT,
+  author={Ivanov, Dmitry and Menshutin, Alexey and Fokin, Denis and Kamenev, Yury and Pospelov, Sergey and Kulikov, Egor and Stroganov, Nikita},
+  booktitle={2022 IEEE/ACM 15th International Workshop on Search-Based Software Testing (SBST)}, 
+  title={UTBot Java at the SBST2022 Tool Competition}, 
+  year={2022},
+  volume={},
+  number={},
+  pages={39-40},
+  doi={10.1145/3526072.3527529}}
+  
+@online{UTBot,
+title={UnitTestBot Java},
+url="https://github.com/UnitTestBot/UTBotJava",
+lastaccessed = {June 9, 2023}
+}
+
 @InProceedings{Zthree,
 author       = {de Moura, Leonardo and
                 Bj{\o}rner, Nikolaj},
