--- a/papers/LOPSRT-23/rel.tex
+++ b/papers/LOPSRT-23/rel.tex
@@ -1,12 +1,12 @@
 \section{Relational Programming, Verifiers, and Solvers}
 \label{sec:rel}
 
-The implementation of our layout synthesizer employs the techniques of relational programming. Here
-we briefly recollect what relational programming is and how the tools we use work.
+%The implementation of our layout synthesizer employs the techniques of relational programming. Here
+%we briefly recollect what relational programming is and how the tools we use work.
 
 Relational programming~\cite{TRS} is an approach based on the idea of describing programs as
 relations. It can be considered as a branch of logic programming in which the use of
-all non-relational constructs (side-effects, extra-logic features) is discouraged. In a
+all non-relational constructs (side-effects, extra-logical features) is discouraged. In a
 narrow sense relational programming amounts to writing programs in \textsc{miniKanren}~--- a
 specifically designed for this purpose embedded DSL. Initially developed for \textsc{Scheme}/\textsc{Racket}
 \textsc{miniKanren} later was ported for dozens of host languages\footnote{http://minikanren.org/\#implementations}.
