--- a/papers/LOPSRT-23/main.tex
+++ b/papers/LOPSRT-23/main.tex
@@ -80,7 +80,7 @@ morecomment=[s]{(*}{*)}
 
 \begin{document}
 %
-\title{Relational Solver for Java Generics Type System}
+\title{Relational Solver for \textsc{Java} Generics Type System}
 %
 %\titlerunning{Abbreviated paper title}
 % If the paper title is too long for the running head, you can set
@@ -110,8 +110,8 @@ Saint-Petersburg,\\
   We present a solver for Java generics type system implemented using relational verifier-to-solver
   approach. The solver finds solutions for a system of subtyping inequations with free variables
   and thus can be used to determine a concrete type satisfying a set of constraints. The
-  context of this work is symbolic execution for testing and verification of Java programs.
-\keywords{Java generics \and relational programming \and relational solvers.}
+  context of this work is symbolic execution for testing and verification of \textsc{Java} programs.
+\keywords{\textsc{Java} generics \and relational programming \and relational solvers.}
 \end{abstract}
 %
 %
