--- a/papers/LOPSRT-23/main.bib
+++ b/papers/LOPSRT-23/main.bib
@@ -1,3 +1,28 @@
+@book{tapl,
+  author = {Pierce, Benjamin C.},
+  biburl = {https://www.bibsonomy.org/bibtex/2078fb5cb1e3638d53ec8aa21e241c306/gdmcbain},
+  isbn = {0262162091},
+  keywords = {03b15-higher-order-logic-type-theory},
+  month = feb,
+  posted-at = {2015-09-16 07:18:50},
+  priority = {5},
+  publisher = {MIT Press},
+  timestamp = {2017-06-29T07:13:07.000+0200},
+  title = {{Types and Programming Languages}},
+  url = {http://ropas.snu.ac.kr/\~{}kwang/520/pierce\_book.pdf},
+  year = 2002
+}
+
+@inproceedings{wild,
+title = "Wild FJ",
+abstract = "This paper presents a formalization of wildcards, which is one of the new features of the Java programming language in version JDK5.0. Wildcards help alleviating the impedance mismatch between generics, or parametric polymorphism, and traditional object-oriented subtype polymorphism. They do this by quantifying over parameterized types with different type arguments. Wildcards take inspiration from several sources including use-site variance, and they could be considered as a way to introduce a syntactically light-weight and not fully general kind of existential types into a main-stream language. This formalization describes the approach, in particular the wildcard capture process where the existential nature of wildcards becomes evident.",
+author = "Mads Torgersen and Erik Ernst and Hansen, {Christian Plesner}",
+year = "2005",
+language = "English",
+booktitle = "Proceedings of FOOL 12",
+note = "The Twelth International Workshop on Foundations of Object-Oriented Languages ; Conference date: 15-01-2005",
+}
+
 @article{JGTC,
 author = {Grigore, Radu},
 title = {Java Generics Are Turing Complete},
